# Grafi-ID-Core

./: .gitignore  FIX_HISTORY.txt  README.md  config.json  pyproject.toml
desktop/: README.md  config.json  index.html  package-lock.json  package.json  vite.config.ts
desktop/src/: App.css  App.tsx
desktop/src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs  python.rs  shell.rs
docs/: ARCHITECTURE.md  CHECKPOINT_STABILITY.md  CLEANUP.md  CORE_STATUS.md  DECISIONS.md  GRAFITALK_INTEGRATION.md  GUIDE.md  HANDOVER.md  LAUNCH_BOUNDARIES.md  MVP_RELEASE.md  PACKAGED_USAGE.md  PERFORMANCE_ARCHITECTURE.md  QA_CHECKLIST.md  RELEASE_VERIFICATION.md  TAURI_DEV_WATCHER.md  USAGE_OBSERVATION.md  WORKFLOW.md  grafid-export-spec.md  grafitalk-inbox.md
grafid/: __init__.py
grafid/cli/: git_display.py  grafitalk.py  history.py  ipc.py  main.py  portability.py  projects.py  resume.py  runtime.py  scan.py  session.py  usage.py
grafid/config/: __init__.py  manager.py  paths.py  preferences.py
grafid/core/: __init__.py  constants.py  exceptions.py  project_categories.py  project_status.py  session_status.py
grafid/db/: __init__.py  connection.py  integrity.py  schema.py  transactions.py
grafid/git/: __init__.py  detection.py  models.py  runner.py  (+2 more)
logs/: usage_journal.jsonl
packaging/: README.md  _python_base_info.py  build_release.ps1  build_runtime.ps1  create_icons.ps1  layout.md  verify_packaged_runtime.ps1  verify_release_bundle.ps1
(+160 files in other folders)
