[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graf-id"
version = "0.1.0"
description = "Local-first workflow continuity utility for developers"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Graf-Id Contributors" }]
dependencies = [
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
graf-id = "grafid.cli.main:main"
grafid = "grafid.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["grafid*"]

[tool.pytest.ini_options]
testpaths = ["grafid/tests"]
pythonpath = ["."]
