[package]
name = "graf-id-desktop"
version = "0.1.0"
description = "Graf-Id desktop shell"
authors = ["Graf-Id Contributors"]
edition = "2021"

[lib]
name = "graf_id_desktop_lib"
crate-type = ["lib", "cdylib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
